--- a/templates/base.html
+++ b/templates/base.html
@@ -124,6 +124,9 @@
     {% endblock %}
 
     {% block postloadjs %}
+    <script type="text/javascript">
+    
+    </script>
     {% endblock %}
 
     
