--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
     {% block extra_js %}
     {% endblock %}
 
-    <titl3> shoes shop {% block extra_title %}{% endblock %}</title>
+    <title> shoes shop {% block extra_title %}{% endblock %}</title>
   </head>
   <body>
     <header class="container-fluid fixed-top">
