--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -23,9 +23,9 @@
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="clothing-link">
                 <!-- <a href="{% url 'products' %}?category=activewear,essentials" class="dropdown-item">Activewear &amp; Essentials</a> -->
-                <a href="{% url 'products' %}?category=men" class="dropdown-item">Men</a>
-                <a href="{% url 'products' %}?category=boy" class="dropdown-item">Boy</a>
-                <a href="{% url 'products' %}?category=activewear,essentials,jeans,shirts" class="dropdown-item">All Clothing</a>
+                <a href="{% url 'products' %}?category=men_shoes" class="dropdown-item">Men</a>
+                <a href="{% url 'products' %}?category=boy_shoes" class="dropdown-item">Boy</a>
+                <a href="{% url 'products' %}?category=men_shoes,boy_shoes" class="dropdown-item">All Clothing</a>
             </div>
         </li>
 
