wishlist and reviews model installed but I need to test them

--- a/products/templates/products/product.html
+++ b/products/templates/products/product.html
@@ -137,7 +137,7 @@
                 {% endif %}
                 {% if forloop.counter|divisibleby:4 %}
                 <div class="col-12 d-none d-xl-block mb-5">
-                    <hr style="height:2px; color:#868dec;background-color: #868dec">
+                    <hr style="height:2px; color:#15665b;background-color: #7d7f94">
                 </div>
                 {% endif %}
                 {% endfor %}
@@ -185,38 +185,3 @@
     });
 </script>
 {% endblock %}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
