--- a/staticfiles/css/base.css
+++ b/staticfiles/css/base.css
@@ -3,10 +3,10 @@ html {
 }
 
 body {
-    background: url('/media/hello.jpg') no-repeat center center fixed;
+    background: url('/media/hello.jpg') alt="shoes" no-repeat center center fixed;
     background-size: cover;
     height: calc(100vh - 164px);
-    color: #555;
+    color: rgb(148, 130, 130);
     font-family: 'Lato';
 }
 
