--- a/templates/base.html
+++ b/templates/base.html
@@ -74,6 +74,7 @@
                                 {% endif %}
                                 <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
                                 <a href="{% url 'wishlist:index' %}" class="dropdown-item">My Wishlist</a>
+                                <a href="{% url 'review:index' %}" class="dropdown-item">My Orders</a>
                                 <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
                             {% else %}
                                 <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
