Change product image class

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -313,7 +313,7 @@ input[name='q']::placeholder {
       color: #000;
   }
 
-  .card-img-top{
+  .product_image{
       width: 200px;
       height: 200px;
   }
