Change the min height of the body container

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -378,3 +378,7 @@ input[name='q']::placeholder {
     footer.page-footer a {
         color: #fff;
     }
+
+    .overlay + .container-fluid{
+        min-height: 350px;
+    }
