base.html change

--- a/templates/base.html
+++ b/templates/base.html
@@ -110,7 +110,7 @@
         </div>
         <div id="delivery-banner" class="row text-center">
             <div class="col bg-black text-white">
-                <h4 class="logo-font my-1">Free delivery on orders over ${{ free_delivery_threshold }}!</h4>                
+                <h4 class="logo-font my-1">Welcome to my shoes online shop</h4>
             </div>            
         </div>
     </header>
@@ -160,34 +160,11 @@
             </div>
             <div class="footer-copyright">
                 <div class="container centre-align valign-wrapper">
-                    This is my personal website created only for learnig purposes 
+                    This is my personal website created only for learning purposes 
                 </div>
             </div>
-        </footer>
-    
-        <!-- Social buttons -->
-        <!-- <ul class="list-unstyled list-inline text-center">
-            <li class="list-inline-item">
-            <a class="btn-floating btn-fb mx-1">
-                <i class="fab fa-facebook-f"> </i>
-            </a>
-            </li>
-            <li class="list-inline-item">
-            <a class="btn-floating btn-ins mx-1">
-                <i class="fab fa-instagram"> </i>
-            </a>
-            </li>
-        </ul> -->
-        <!-- Social buttons -->
-    
+        </footer>   
         </div>
-        <!-- Footer Elements -->
-    
-        <!-- Copyright -->
-        <!-- <div class="footer-copyright text-center py-3">© 2021 Copyright:
-        <a href="#"> example.com</a>
-        </div> -->
-        <!-- Copyright -->
     
     </footer>
     <!-- Footer -->
