base.html text changed for title

--- a/templates/base.html
+++ b/templates/base.html
@@ -110,7 +110,7 @@
         </div>
         <div id="delivery-banner" class="row text-center">
             <div class="col bg-black text-white">
-                <h4 class="logo-font my-1">Welcome to my shoes online shop</h4>
+                <h4 class="logo-font my-1">Welcome to my shoes shop</h4>
             </div>            
         </div>
     </header>
